--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,8 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "sass": "^1.69.5",
     "web3": "^4.3.0"
   },
   "devDependencies": {
